D9-ArgoCD-Kustomize-adv-deployment/Lab3-Kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-demo

spec:
  replicas: 1

  selector:
    matchLabels:
      app: nginx-demo

  template:

    metadata:
      labels:
        app: nginx-demo

    spec:

      containers:

      - name: nginx

        image: nginx:latest

        imagePullPolicy: IfNotPresent

        ports:

        - containerPort: 80

        resources:

          requests:
            cpu: 100m
            memory: 128Mi

          limits:
            cpu: 200m
            memory: 256Mi
