D9-ArgoCD-Kustomize-adv-deployment/Lab3-Kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: nginx-demo

spec:

  ingressClassName: nginx

  rules:

  - host: gitops-student-31.lab.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: nginx-demo

            port:

              number: 80
